--- a/qrgui/dialogs/propertiesDialog.ui
+++ b/qrgui/dialogs/propertiesDialog.ui
@@ -14,34 +14,34 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="3">
+   <item row="1" column="0" rowspan="5" colspan="3">
     <widget class="QListWidget" name="PropertiesNamesList"/>
    </item>
-   <item row="2" column="3">
+   <item row="5" column="3">
     <widget class="QPushButton" name="closeButton">
      <property name="text">
       <string>Close</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="2">
-    <widget class="QPushButton" name="deleteButton">
-     <property name="text">
-      <string>Delete</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
+   <item row="1" column="3">
     <widget class="QPushButton" name="addButton">
      <property name="text">
       <string>Add</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="2" column="3">
     <widget class="QPushButton" name="changeButton">
      <property name="text">
       <string>Change</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="3">
+    <widget class="QPushButton" name="deleteButton">
+     <property name="text">
+      <string>Delete</string>
      </property>
     </widget>
    </item>
