--- a/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
+++ b/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
@@ -13,8 +13,8 @@
   <property name="windowTitle">
    <string>2D Robot Model</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="0,1,1,1,1,1,1,1,1,1,1">
-   <item row="1" column="0">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0,0,0,0,0">
+   <item row="0" column="0">
     <widget class="QPushButton" name="lineButton">
      <property name="maximumSize">
       <size>
@@ -22,15 +22,28 @@
        <height>16777215</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string>Line (L)</string>
+     </property>
      <property name="text">
-      <string>Line</string>
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/ruler.png</normaloff>:/icons/ruler.png</iconset>
+     </property>
+     <property name="shortcut">
+      <string>L</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
      </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="0" column="1">
     <widget class="QPushButton" name="wallButton">
      <property name="maximumSize">
       <size>
@@ -38,15 +51,25 @@
        <height>16777215</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string>Wall (W)</string>
+     </property>
      <property name="text">
-      <string>Wall</string>
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/wall.png</normaloff>:/icons/wall.png</iconset>
+     </property>
+     <property name="shortcut">
+      <string>W</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="1" column="0">
     <widget class="QPushButton" name="stylusButton">
      <property name="maximumSize">
       <size>
@@ -54,15 +77,25 @@
        <height>16777215</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string>Pencil (P)</string>
+     </property>
      <property name="text">
-      <string>Stylus</string>
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/2d_pencil.png</normaloff>:/icons/2d_pencil.png</iconset>
+     </property>
+     <property name="shortcut">
+      <string>P</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="1" column="1">
     <widget class="QPushButton" name="ellipseButton">
      <property name="maximumSize">
       <size>
@@ -70,15 +103,25 @@
        <height>16777215</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string>Ellipse (E)</string>
+     </property>
      <property name="text">
-      <string>Ellipse</string>
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/2d_ellipse.png</normaloff>:/icons/2d_ellipse.png</iconset>
+     </property>
+     <property name="shortcut">
+      <string>E</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="2" column="0">
     <widget class="QPushButton" name="clearButton">
      <property name="maximumSize">
       <size>
@@ -86,8 +129,15 @@
        <height>16777215</height>
       </size>
      </property>
-     <property name="text">
+     <property name="toolTip">
       <string>Clear</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/2d_clear.png</normaloff>:/icons/2d_clear.png</iconset>
      </property>
      <property name="checkable">
       <bool>false</bool>
@@ -412,39 +462,125 @@ p, li { white-space: pre-wrap; }
      </widget>
     </widget>
    </item>
-   <item row="7" column="0" colspan="2">
+   <item row="8" column="0">
     <widget class="QPushButton" name="saveWorldModelPushButton">
+     <property name="toolTip">
+      <string>Save World Model (Ctrl+S)</string>
+     </property>
      <property name="text">
-      <string>Save World Model</string>
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
+     </property>
+     <property name="shortcut">
+      <string>Ctrl+S</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="0" colspan="2">
+   <item row="0" column="2" rowspan="12">
+    <widget class="graphicsUtils::AbstractView" name="graphicsView"/>
+   </item>
+   <item row="8" column="1">
     <widget class="QPushButton" name="loadWorldModelPushButton">
+     <property name="toolTip">
+      <string>Load World Model (Crtl+O)</string>
+     </property>
      <property name="text">
-      <string>Load World Model</string>
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/open.png</normaloff>:/icons/open.png</iconset>
+     </property>
+     <property name="shortcut">
+      <string>Ctrl+O</string>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="0">
+    <widget class="QPushButton" name="handCursorButton">
+     <property name="toolTip">
+      <string>Hand dragging mode</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/hand.png</normaloff>:/icons/hand.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="1">
+    <widget class="QPushButton" name="multiselectionCursorButton">
+     <property name="toolTip">
+      <string>Multiselection mode</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/multiselection.png</normaloff>:/icons/multiselection.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="11" column="0" colspan="2">
+    <widget class="QPushButton" name="autoCenteringButton">
+     <property name="toolTip">
+      <string>Camera following robot</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../../robotsInterpreter.qrc">
+       <normaloff>:/icons/target.png</normaloff>:/icons/target.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0" colspan="2">
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="Line" name="line_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
    <item row="9" column="0" colspan="2">
-    <widget class="QPushButton" name="runButton">
-     <property name="text">
-      <string>Run program</string>
+    <widget class="QFrame" name="frame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
-    </widget>
-   </item>
-   <item row="10" column="0" colspan="2">
-    <widget class="QPushButton" name="stopButton">
-     <property name="text">
-      <string>Stop program</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="2" rowspan="10">
-    <widget class="graphicsUtils::AbstractView" name="graphicsView"/>
-   </item>
-   <item row="0" column="0" colspan="3">
-    <widget class="QFrame" name="menuFrame">
      <property name="frameShape">
       <enum>QFrame::Panel</enum>
      </property>
@@ -453,84 +589,56 @@ p, li { white-space: pre-wrap; }
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPushButton" name="handCursorButton">
+       <widget class="QPushButton" name="runButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="toolTip">
-         <string>Hand dragging mode</string>
+         <string>Run program (Enter)</string>
         </property>
         <property name="text">
          <string/>
         </property>
         <property name="icon">
          <iconset resource="../../robotsInterpreter.qrc">
-          <normaloff>:/icons/hand.png</normaloff>:/icons/hand.png</iconset>
+          <normaloff>:/icons/2d_run.png</normaloff>:/icons/2d_run.png</iconset>
         </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="multiselectionCursorButton">
-        <property name="toolTip">
-         <string>Multiselection mode</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../robotsInterpreter.qrc">
-          <normaloff>:/icons/multiselection.png</normaloff>:/icons/multiselection.png</iconset>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="Line" name="line">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="autoCenteringButton">
-        <property name="toolTip">
-         <string>Camera following robot</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../robotsInterpreter.qrc">
-          <normaloff>:/icons/target.png</normaloff>:/icons/target.png</iconset>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
+        <property name="iconSize">
          <size>
-          <width>40</width>
-          <height>20</height>
+          <width>44</width>
+          <height>44</height>
          </size>
         </property>
-       </spacer>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="stopButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>Stop program (Enter)</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../robotsInterpreter.qrc">
+          <normaloff>:/icons/2d_stop.png</normaloff>:/icons/2d_stop.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>44</width>
+          <height>44</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
