--- a/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
+++ b/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
@@ -10,5 +10,13 @@
         <file>icons/target.png</file>
         <file>icons/hand.png</file>
         <file>icons/multiselection.png</file>
+        <file>icons/open.png</file>
+        <file>icons/save.png</file>
+        <file>icons/ruler.png</file>
+        <file>icons/2d_clear.png</file>
+        <file>icons/2d_ellipse.png</file>
+        <file>icons/2d_pencil.png</file>
+        <file>icons/2d_stop.png</file>
+        <file>icons/2d_run.png</file>
     </qresource>
 </RCC>
