--- a/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
+++ b/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
@@ -485,7 +485,7 @@ p, li { white-space: pre-wrap; }
    <item row="8" column="1">
     <widget class="QPushButton" name="loadWorldModelPushButton">
      <property name="toolTip">
-      <string>Load World Model (Crtl+O)</string>
+      <string>Load World Model (Ctrl+O)</string>
      </property>
      <property name="text">
       <string/>
